sixth draft + add explanation on why using profile in pom.xml